<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FindDoctor"
    style="@style/container"
    tools:context=".FindDoctorActivity">

    <TextView
        android:text="@string/FindDoctor"
        style="@style/mainHeadline"/>

    <EditText
        android:id="@+id/inputSearchDoctorName"
        android:hint="@string/placeholder_username"
        android:inputType="textPersonName"
        style="@style/inputField"/>

    <EditText
        android:id="@+id/inputSearchDoctorDepartment"
        android:hint="@string/placeholder_department"
        android:inputType="textAutoCorrect"
        style="@style/inputField" />

    <EditText
        android:id="@+id/inputSearchDistance"
        android:hint="@string/placeholder_distance_km"
        android:inputType="number"
        style="@style/inputField" />

    <Button
        android:id="@+id/buttonSearchDoctorButton"
        tools:text="Search"
        android:text="@string/SearchDoctor"
        style="@style/buttonPrimary"/>

</LinearLayout>