<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container"
    tools:context=".LogInActivity">

    <TextView
        android:text="@string/LogIn"
        style="@style/mainHeadline"/>

    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/placeholder_email_address"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        style="@style/inputField"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/passwordInput"
        android:hint="@string/placeholder_password"
        android:inputType="textPassword"
        android:autofillHints=""
        style="@style/inputField"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/buttonLogin"
        android:text="@string/LogIn"
        style="@style/buttonPrimary"
        android:layout_width="match_parent"/>

</LinearLayout>