<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container"
    tools:context=".DoctorProfileActivity">

    <TextView
        android:text="@string/DoctorProfile"
        style="@style/mainHeadline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:padding="18dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/card_radius">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/doctor"
                    android:contentDescription="@string/doctor_image" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">
                    <TextView
                        android:id="@+id/doctorProfileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dr. James"
                        android:textSize="22sp"
                        android:textColor="#1D2B4F"/>
                    <TextView
                        android:id="@+id/doctorProfileDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/doctorDepartment"
                        android:textSize="16sp"
                        android:textColor="#B8B9DA"
                        android:layout_marginTop="5dp"/>
                    <LinearLayout
                        android:id="@+id/doctorRateStars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/Feedbacks"
        style="@style/mainHeadline"
        android:textSize="23sp"
        android:layout_marginBottom="0dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:id="@+id/doctorFeedbackList"
            android:backgroundTint="#E11515"
            android:divider="#ECF3FE"
            tools:ignore="NestedScrolling"
            android:layout_height="match_parent">
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/buttonGoToFeedbackPage"
        android:text="@string/GiveFeedback"
        tools:text="Give Feedback"
        style="@style/buttonPrimary" />
</LinearLayout>
