<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="20dp">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:padding="18dp"
        android:background="@drawable/card_radius">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/doctor"
                android:contentDescription="@string/doctor_image" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp">
                <TextView
                    android:id="@+id/doctorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dr. James"
                    android:textSize="22sp"
                    android:textColor="#1D2B4F"/>
                <TextView
                    android:id="@+id/doctorDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doctorDepartment"
                    android:textSize="16sp"
                    android:textColor="#B8B9DA"
                    android:layout_marginTop="5dp"/>
                <LinearLayout
                    android:id="@+id/doctorCardStarsWrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/buttonViewProfile"
            android:text="@string/ViewProfile"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            style="@style/buttonSecondary"/>
    </LinearLayout>
</LinearLayout>
